# google-fonts-heatmap

./: .gitignore  Cargo.toml  README.md  download.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: heatmap.yml  pages.yml
github/workflows/: heatmap.yml
google_fonts_heatmap/: __init__.py  __main__.py  _skrifa.pyi  coverage_jointplot.py  outline_command_barplot.py  outline_coord_jointplot.py  outline_len_histplot.py  upem_countplot.py  weight_countplot.py
src/: coverage.rs  error.rs  heatmap.py  lib.rs  metrics.rs  outline.rs  pens.rs
src/google_fonts_heatmap/: coverage_heatmap.py  coverage_jointplot.py  outline_coord_jointplot.py  outline_len_hist.py  outline_len_histplot.py  upem_countplot.py
